--- a/.classpath
+++ b/.classpath
@@ -5,11 +5,14 @@
 	<classpathentry kind="src" path="gui_3"/>
 	<classpathentry kind="src" path="guiAdressverwaltung"/>
 	<classpathentry kind="src" path="gui"/>
+	<classpathentry kind="src" path="rsa"/>
+	<classpathentry kind="src" path="rechner"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="lib/_mytools16-3.0.jar"/>
+	<classpathentry kind="lib" path="lib/h2-1.3.176.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
