--- a/.classpath
+++ b/.classpath
@@ -2,9 +2,9 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gui_1"/>
-	<classpathentry kind="src" path="gui_3"/>
-	<classpathentry kind="src" path="guiAdressverwaltung"/>
-	<classpathentry kind="src" path="gui"/>
+	<classpathentry kind="src" path="gui_2_Adressverwaltung"/>
+	<classpathentry kind="src" path="gui_3_Adressverwaltung"/>
+	<classpathentry kind="src" path="gui_4_Adressverwaltung"/>
 	<classpathentry kind="src" path="rsa"/>
 	<classpathentry kind="src" path="rechner"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
