--- a/.classpath
+++ b/.classpath
@@ -3,8 +3,7 @@
 	<classpathentry excluding="main/java/|test/java/" kind="src" path="src"/>
 	<classpathentry kind="src" path="gui_kurs"/>
 	<classpathentry kind="src" path="gui_2_Adressverwaltung"/>
-	<classpathentry kind="src" path="gui_3_Adressverwaltung"/>
-	<classpathentry kind="src" path="gui_4_Adressverwaltung"/>
+	<classpathentry kind="src" path="gui_4_Adressverwaltung_mit_RMI"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
