--- a/resources/database.properties
+++ b/resources/database.properties
@@ -2,7 +2,7 @@
 #   MYSQL   H2   ORACLE   POSTGRES   MSSQLSERVER   DB2    #
 ###########################################################
 
-DEFAULT_DB=H2
+DEFAULT_DB=POSTGRES
 
 
 
