--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,6 @@
 	</properties>
 
 	<dependencies>
-
 		<dependency>
 			<groupId>ch.java_akademie.mytoolsm</groupId>
 			<artifactId>mytoolsm</artifactId>
@@ -36,35 +35,17 @@
 			<scope>test</scope>
 		</dependency>
 
+		<!-- +========================================+ -->
+		<!-- | DB DEPENDENCIES (ECLIPSELINK und DB's) | -->
+		<!-- +========================================+ -->
 		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>eclipselink</artifactId>
-			<version>2.5.2</version>
+			<groupId>ch.jmb.dbdeps</groupId>
+			<artifactId>dbdeps</artifactId>
+			<version>1.0.0</version>
+			<type>pom</type>
 		</dependency>
+		<!-- +========================================+ -->
 
-		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
-			<version>1.3.176</version>
-		</dependency>
-
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.36</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>9.4-1201-jdbc41</version>
-		</dependency>
-
-		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc7</artifactId>
-			<version>11.0.0</version>
-		</dependency>
 
 	</dependencies>
 
