--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="src" path="gui_2_Adressverwaltung"/>
 	<classpathentry kind="src" path="gui_4_Adressverwaltung_mit_RMI"/>
 	<classpathentry kind="src" path="resources"/>
+	<classpathentry kind="src" path="gui_template"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
