--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>java23gui</groupId>
+	<groupId>ch.jmb.workspace_se</groupId>
 
 	<artifactId>java23gui</artifactId>
 
